--- a/client/hrpay-landingpage/package.json
+++ b/client/hrpay-landingpage/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^10.7.7",
     "@tailwindcss/vite": "^4.1.13",
+    "animejs": "^4.2.2",
     "motion": "^12.23.26",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
